[ML] Add a vectorized BLAS implementation
Whenever a native BLAS implementation isn't available on the system, Spark
automatically falls back onto a Java implementation. With the recent release
of the Vector API in the OpenJDK [1], we can use hardware acceleration for such
operations.

This patch introduces a VectorizedBLAS class which implements such
hardware-accelerated BLAS operations. This feature is hidden behind the
"vectorized" profile that you can enable by passing "-Pvectorized" to sbt or
maven.

The Vector API has been introduced in JDK 16. Following discussion on the
mailing list, this API is introduced transparently and needs to be enabled
explicitely.

[1] https://openjdk.java.net/jeps/338